@@ -1,3 +1,5 @@
+HEAD
+	+ Fixed module instantiatio with wrong mode
 3.5.3
 	+ Use bash as default shell
 	+ Added external AD field to LDAP information model
